--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,7 +135,7 @@ jobs:
               fi
             fi
 
-            if [ should_build_examples == "no" ]; then
+            if [ should_build_examples = "no" ]; then
               echo "Nothing to build: ESP-IDF ${{ matrix.esp_idf_version }} does not support ${{ matrix.target }}"
               exit 0
             fi
@@ -150,7 +150,8 @@ jobs:
             # The pwd at this point is "examples/":
             for dir in */; do
               cd ${dir}
-              echo "\n\n********************************************************************************"
+              echo ""; echo "";
+              echo "********************************************************************************"
               echo "Building example project: $dir"
               echo "On target: ${{ matrix.target }}"
               echo "With ESP-IDF version: ${{ matrix.esp_idf_version }}"
